--- a/requirements.txt
+++ b/requirements.txt
@@ -7,5 +7,10 @@ torch
 nltk
 tornado
 spacy
+rich==13.9.4
+markdown-it-py==3.0.0
+mdurl==0.1.2
+pygments==2.19.1
+
 https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.5.0/en_core_web_sm-3.5.0.tar.gz
 
