--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,10 @@ rich==13.9.4
 markdown-it-py==3.0.0
 mdurl==0.1.2
 pygments==2.19.1
+pip==25.0.1
+setuptools>=65.5.1
+wheel
+
 
 https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.5.0/en_core_web_sm-3.5.0.tar.gz
 
