--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,6 @@ pygments==2.19.1
 pip==25.0.1
 setuptools>=65.5.1
 wheel
-
+nest-asyncio
 # https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.5.0/en_core_web_sm-3.5.0.tar.gz
 
